--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_purple">#18E3C4</color>
+    <color name="my_ash">#837F7F</color>
+    <color name="my_green">#25B82C</color>
 </resources>
